--- a/photo/index.html
+++ b/photo/index.html
@@ -184,6 +184,10 @@
         margin-left: 0.5rem;
       }
 
+      .container smartphone b {
+        color: #f5c012;
+      }
+
       .container smartphone .copy {
         height: 1.5rem;
         cursor: pointer;
@@ -196,6 +200,7 @@
         color: #f5c012;
         text-decoration: underline;
         text-underline-offset: 0.5rem;
+        font-weight: bold;
       }
 
       .container smartphone a:hover {
@@ -229,8 +234,8 @@
     <div class="navbar">
       <div class="container">
         <a href="../linear/">
-          <img src="../img/right-arrow-svgrepo.svg">
-          <img src="../linear/metadata.png" class="preview">
+          <img src="../img/right-arrow-svgrepo.svg" />
+          <img src="../linear/metadata.png" class="preview" />
           Acessar o gerador de tag
         </a>
       </div>
@@ -264,13 +269,14 @@
       </footer>
 
       <smartphone>
-        <b>
-          Companheiros e companheiras, agradeço a todos que ajudaram e doaram,
-          com a ajuda de vocês consegui comprar um celular para trabalhar e sou
-          imensamente grato.
-        </b>
-        <br />
-        24 de Outubro de 2022
+        Olá, me chamo Matheus Cristian, estou dedicando algumas horas desses
+        últimos dias no desenvolvimento deste sistema, se você gostou dessa
+        iniciativa e deseja me apoiar financeiramente, segue minha chave pix:
+        <b>mathues@email.com</b> ou
+        <a href="https://nubank.com.br/pagar/199pu6/OH6ITDqcpU" target="_blank">
+          clicando aqui neste link do Nubank
+          <img src="../img/nubank-logo.svg" class="nubank" />
+        </a>
       </smartphone>
     </div>
 
