--- a/photo/index.html
+++ b/photo/index.html
@@ -449,9 +449,10 @@
       ];
 
       // document.querySelector("input").value =
-      //   names[Math.floor(Math.random() * names.length)];
+      // names[Math.floor(Math.random() * names.length)];
 
       document.querySelector("button").addEventListener("click", () => {
+        gtag("event", "download");
         const a = document.createElement("a");
         a.setAttribute("href", canvas.toDataURL("image/png"));
         a.setAttribute("download", "image");
