fix: fixed title name

--- a/haddad/index.html
+++ b/haddad/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Primary Meta Tags -->
     <title>
-      Haddad 2º Turno — Gerar flyer de apoio ao Haddad com seu nome (alternativa)
+      Haddad 2º Turno — Gerar flyer de apoio ao Haddad com seu nome
     </title>
     <meta
       name="title"
