--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
         margin-left: 0.5rem;
       }
 
+      .container smartphone b {
+        color: #f5c012;
+      }
+
       .container smartphone .copy {
         height: 1.5rem;
         cursor: pointer;
@@ -228,14 +232,14 @@
     <div class="navbar">
       <div class="container">
         <a href="photo/">
-          <img src="img/right-arrow-svgrepo.svg">
-          <img src="photo/metadata.png" class="preview">
+          <img src="img/right-arrow-svgrepo.svg" />
+          <img src="photo/metadata.png" class="preview" />
           Acessar o gerador de filtro com sua foto
         </a>
 
         <a href="linear/">
-          <img src="img/right-arrow-svgrepo.svg">
-          <img src="linear/metadata.png" class="preview">
+          <img src="img/right-arrow-svgrepo.svg" />
+          <img src="linear/metadata.png" class="preview" />
           Acessar o gerador de tag (alternativa)
         </a>
       </div>
@@ -262,18 +266,14 @@
       </footer>
 
       <smartphone>
-        <b>
-          Companheiros e companheiras, agradeço a todos que ajudaram e doaram,
-          com a ajuda de vocês consegui comprar um celular para trabalhar e sou
-          imensamente grato, saliento ainda que, esta página não tem nenhum
-          contato com o instagram @lula.turno2 (do qual possui o total direito
-          de imagem pela criação e administrado por @joaonogueraa), o que fiz,
-          foi apenas facilitar o processo de criação das tags customizados com
-          os nomes, ou seja, o desenvolvimento desta página, em prol da campanha
-          de Lula.
-        </b>
-        <br />
-        24 de Outubro de 2022
+        Olá, me chamo Matheus Cristian, estou dedicando algumas horas desses
+        últimos dias no desenvolvimento deste sistema, se você gostou dessa
+        iniciativa e deseja me apoiar financeiramente, segue minha chave pix:
+        <b>mathues@email.com</b> ou
+        <a href="https://nubank.com.br/pagar/199pu6/OH6ITDqcpU" target="_blank">
+          clicando aqui neste link do Nubank
+          <img src="../img/nubank-logo.svg" class="nubank" />
+        </a>
       </smartphone>
     </div>
 
