fix: added label

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
       <button class="save">Salvar Imagem</button>
       <button class="share">
-        Compartilhar
+        Compartilhar Imagem
         <img src="img/share.svg" />
       </button>
 
