Melhorias de layout e adicionando tratativas de erros

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 </head>
 
 <body>
+  <noscript>
+    <div>Para continuar habilite o JavaScript</div>
+  </noscript>
+
   <div class="container">
     <canvas width="1080" height="1080"></canvas>
 
