Corrigindo problema de reconhecimento de click

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
     <div class="form-input">
       <input name="yourname" type="text" placeholder="Coloque seu nome aqui" />
-      <button name="share">Compartilhar</button>
-      <button name="save">Salvar</button>
+      <button id="btnShare" name="share">Compartilhar</button>
+      <button id="btnSave" name="save">Salvar</button>
     </div>
 
     <footer>
