Testando correção de botões

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
     <div class="form-input">
       <input name="yourname" type="text" placeholder="Coloque seu nome aqui" />
-      <button id="btnShare" name="share">Compartilhar</button>
-      <button id="btnSave" name="save">Salvar</button>
+      <a class="btnAcao" href="javascript:shareImage()">Compartilhar</a>
+      <a class="btnAcao" href="javascript:saveImage()">Salvar</a>
     </div>
 
     <footer>
