voltando para a tag botoes

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
     <div class="form-input">
       <input name="yourname" type="text" placeholder="Coloque seu nome aqui" />
-      <a class="btnAcao" href="javascript:shareImage()">Compartilhar</a>
-      <a class="btnAcao" href="javascript:saveImage()">Salvar</a>
+      <button id="btnShare" class="btnAcao" href="javascript:shareImage()">Compartilhar</button>
+      <button id="btnSave" class="btnAcao" href="javascript:saveImage()">Salvar</button>
     </div>
 
     <footer>
