Adicionando novos botões

--- a/index.html
+++ b/index.html
@@ -51,12 +51,20 @@
   </noscript>
 
   <div class="container">
+    <div class="navbar">
+      <a class="btn btnDoe" href="https://nubank.com.br/pagar/34k5f/YBpybYS3Ej" target="_blank">Doe</a>
+      <a class="btn btnAjuda" href="https://www.instagram.com/reel/CkQ2_IaJGgr/?igshid=YmMyMTA2M2Y="
+        target="_blank">Como compartilhar</a>
+    </div>
+
     <canvas width="1080" height="1080"></canvas>
 
     <div class="form-input">
       <input name="yourname" type="text" placeholder="Coloque seu nome aqui" />
-      <button id="btnShare" class="btnAcao" href="javascript:shareImage()">Compartilhar</button>
-      <button id="btnSave" class="btnAcao" href="javascript:saveImage()">Salvar</button>
+      <div>
+        <button id="btnSave" class="btn btnSave" href="javascript:saveImage()">Salvar</button>
+        <button id="btnShare" class="btn btnShare" href="javascript:shareImage()">Compartilhar</button>
+      </div>
     </div>
 
     <footer>
