feat: added a president page

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         align-items: center;
         margin-bottom: 1rem;
         row-gap: 0.5rem;
+        color: #f5c012;
       }
 
       .container footer a {
@@ -263,11 +264,30 @@
 
       <canvas width="1080" height="1080"></canvas>
 
+      
+      <smartphone>
+        Olá, me chamo Matheus Cristian, estou em período de mudança para uma
+        casa nova, colabore com meu chá de casa nova com qualquer valor através
+        do pix, segue minha chave pix:
+        <b>mathues@email.com</b> ou
+        <a href="https://nubank.com.br/pagar/199pu6/OH6ITDqcpU" target="_blank">
+          clicando aqui neste link do Nubank
+          <img src="img/nubank-logo.svg" class="nubank" />
+        </a>
+      </smartphone>
+
       <footer>
+        Desenvolvido por:
+
         <a href="https://www.instagram.com/cristianfrontend/" target="_blank">
           <img src="img/cristiantela-profile.png" class="profile" />
           <img src="img/instagram-logo.svg" />
           <span><b>cristian</b>frontend</span>
+        </a>
+
+        <a href="https://www.linkedin.com/in/cristiantela/" target="_blank">
+          <img src="img/linkedin-logo.svg" />
+          <span>cristiantela</span>
         </a>
 
         <a href="https://github.com/cristiantela/lula2turno" target="_blank">
@@ -275,17 +295,6 @@
           <span>cristiantela/lula2turno</span>
         </a>
       </footer>
-
-      <smartphone>
-        Olá, me chamo Matheus Cristian, estou dedicando algumas horas desses
-        últimos dias no desenvolvimento deste sistema, se você gostou dessa
-        iniciativa e deseja me apoiar financeiramente, segue minha chave pix:
-        <b>mathues@email.com</b> ou
-        <a href="https://nubank.com.br/pagar/199pu6/OH6ITDqcpU" target="_blank">
-          clicando aqui neste link do Nubank
-          <img src="img/nubank-logo.svg" class="nubank" />
-        </a>
-      </smartphone>
     </div>
 
     <script>
