--- a/photo/index.html
+++ b/photo/index.html
@@ -248,6 +248,18 @@
 
       <canvas width="1080" height="1080"></canvas>
 
+      
+      <smartphone>
+        Olá, me chamo Matheus Cristian, estou em período de mudança para uma
+        casa nova, colabore com meu chá de casa nova com qualquer valor através
+        do pix, segue minha chave pix:
+        <b>mathues@email.com</b> ou
+        <a href="https://nubank.com.br/pagar/199pu6/OH6ITDqcpU" target="_blank">
+          clicando aqui neste link do Nubank
+          <img src="../img/nubank-logo.svg" class="nubank" />
+        </a>
+      </smartphone>
+
       <footer>
         Desenvolvido por:
 
@@ -267,17 +279,6 @@
           <span>cristiantela/lula2turno</span>
         </a>
       </footer>
-
-      <smartphone>
-        Olá, me chamo Matheus Cristian, estou dedicando algumas horas desses
-        últimos dias no desenvolvimento deste sistema, se você gostou dessa
-        iniciativa e deseja me apoiar financeiramente, segue minha chave pix:
-        <b>mathues@email.com</b> ou
-        <a href="https://nubank.com.br/pagar/199pu6/OH6ITDqcpU" target="_blank">
-          clicando aqui neste link do Nubank
-          <img src="../img/nubank-logo.svg" class="nubank" />
-        </a>
-      </smartphone>
     </div>
 
     <script>
