Adicionando imagens com mascara

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
       <a class="btn btnAjuda" href="https://www.instagram.com/reel/CkQ2_IaJGgr/?igshid=YmMyMTA2M2Y="
         target="_blank">Como compartilhar</a>
     </div>
+    <div class="navbar navbar-menu">
+      <label class="btn btnMenu btnMenuFigura active" for="chkFigura">Figura</label>
+      <input id="chkFigura" name="chkMenu" type="radio" target="_blank" checked hidden></input>
+      <label class="btn btnMenu btnMenuFiltro" for="chkFiltro">Filtro</label>
+      <input id="chkFiltro" name="chkMenu" type="radio" target="_blank" hidden></input>
+    </div>
 
     <canvas width="1080" height="1080"></canvas>
 
