--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css?v=3">
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169842087-3"></script>
@@ -90,7 +90,7 @@
     </footer>
   </div>
 
-  <script src="./scripts/script.js?v=2.2"></script>
+  <script src="./scripts/script.js?v=3"></script>
 </body>
 
 </html>
