--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <canvas width="1080" height="1080"></canvas>
 
     <div class="form-input">
-      <input name="yourname" type="text" placeholder="Coloque seu nome aqui" />
+      <input name="yourname" type="text" placeholder="Coloque seu nome aqui" accept="image/*" />
       <div>
         <button id="btnSave" class="btn btnSave" href="javascript:saveImage()">Salvar</button>
         <button id="btnShare" class="btn btnShare" href="javascript:shareImage()">Compartilhar</button>
